snocs as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "actor-framework"]
 	path = actor-framework
 	url = https://github.com/actor-framework/actor-framework.git
+[submodule "snocs"]
+	path = snocs
+	url = https://github.com/osblinnikov/snocs.git
