--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "actor-framework"]
 	path = actor-framework
 	url = https://github.com/actor-framework/actor-framework.git
-[submodule "snocs"]
-	path = snocs
-	url = https://github.com/osblinnikov/snocs.git
+[submodule "github.com/osblinnikov/cnets"]
+	path = github.com/osblinnikov/cnets
+	url = https://github.com/osblinnikov/cnets.git
