--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "github.com/osblinnikov/cnets"]
 	path = github.com/osblinnikov/cnets
 	url = https://github.com/osblinnikov/cnets.git
+[submodule "github.com/osblinnikov/snocs"]
+	path = github.com/osblinnikov/snocs
+	url = https://github.com/osblinnikov/snocs.git
+[submodule "github.com/osblinnikov/gernet"]
+	path = github.com/osblinnikov/gernet
+	url = https://github.com/osblinnikov/gernet.git
+[submodule "github.com/osblinnikov/cnets_java"]
+	path = github.com/osblinnikov/cnets_java
+	url = https://github.com/osblinnikov/cnets_java.git
